--- a/environment_setup/.azureml/conda_dependencies.yml
+++ b/environment_setup/.azureml/conda_dependencies.yml
@@ -21,8 +21,9 @@ dependencies:
       - pyemd
       - ipywebrtc
       - pre-commit
-      - scipy
-      - scikit-learn
+      - tensorflow
+      - tensorflow_hub
+      - matplotlib
       - requests
       - requests-oauthlib
       - regex
