yaml set auth enabled to false

--- a/deployment/aksDeploymentConfig.yml
+++ b/deployment/aksDeploymentConfig.yml
@@ -7,7 +7,7 @@ autoScaler:
     targetUtilization: 80
 dataCollection:
     storageEnabled: True
-authEnabled: True
+authEnabled: False
 appInsightsEnabled : True
 containerResourceRequirements:
     cpu: 1
